<resources>
    <string name="app_name">Image Machine</string>
    <string name="machine_name">Machine Name…</string>
    <string name="add_machine_data">Add Machine Data</string>
    <string name="add_machine_image">Add Machine Image</string>
    <string name="machine_type">Machine Type</string>
    <string name="machine_qr_code_number">Machine QR Code Number…</string>
    <string name="last_maintenance_date">Last Maintenance Date</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="add_machine_type">Add Machine Type</string>
    <string name="no_data_found_please_add_some">No data found, please add some</string>
    <string name="no_image_found_please_add_some">No image found, please add some</string>
    <string name="all_field_required_please_complete_them">All field are required, please complete them</string>
    <string name="got_it">Got it</string>
    <string name="are_you_sure_want_to_remove_the_data">Are you sure want to remove the data?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="delete_images">Delete Images</string>
    <string name="sort_by">Sort By</string>
    <string name="machine_name_">Machine Name</string>
</resources>