<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_machine_type"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/machine_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewMachineType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="24dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelAdd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddType"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/add"/>

    </LinearLayout>

</LinearLayout>