<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activities.MachineDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/txtMachineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/machine_name"/>

            <TextView
                android:id="@+id/txtMachineType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/machine_type"/>

            <TextView
                android:id="@+id/txtQrCodeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/machine_qr_code_number"/>

            <TextView
                android:id="@+id/txtLastMaintenance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/last_maintenance_date"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAddMachineImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_machine_image"
                app:tint="@color/white"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_round_add_photo_alternate_24"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnEditMachine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/add_machine_image"
                app:tint="@color/white"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_baseline_edit_24"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnDeleteMachine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/add_machine_image"
                app:tint="@color/white"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_baseline_delete_24"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMachineImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/layoutNoImage"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/ic_undraw_posting_photo_re_plk8"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/no_image_found_please_add_some"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/layoutDeleteOption"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="-12dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/cardview_dark_background"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:id="@+id/btnDeleteImage"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            style="?attr/selectableItemBackground">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_delete_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:text="@string/delete_images"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnCancelDeleteImage"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            style="?attr/selectableItemBackground">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_close_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>