<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".View.Activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp">

        <RelativeLayout
            android:id="@+id/layoutSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <TextView
                android:id="@+id/txtSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sort_by"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/choiceSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/txtSortBy"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@id/btnAscDesc"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMachineName"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/machine_name_"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMachineType"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/machine_type" />

            </com.google.android.material.chip.ChipGroup>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnAscDesc"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp"
                android:src="@drawable/icon_ascending_sorting" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOfMachines"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layoutSort"
            android:padding="16dp"/>
        
        <LinearLayout
            android:id="@+id/layoutNoData"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/ic_undraw_no_data_re_kwbl"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/no_data_found_please_add_some"/>

        </LinearLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-16dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconMachineList"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_round_collections_24"/>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/circle"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iconAddMachine"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_round_add_circle_24" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconQrCode"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_round_qr_code_24"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>